--- a/client/Thesis/Thesis/Base.lproj/Main.storyboard
+++ b/client/Thesis/Thesis/Base.lproj/Main.storyboard
@@ -34,7 +34,7 @@
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xLW-WZ-f9R">
                                 <rect key="frame" x="212" y="347" width="177" height="53"/>
                                 <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wbt-Wq-LQe">
@@ -198,10 +198,10 @@
             </objects>
             <point key="canvasLocation" x="1551" y="1669"/>
         </scene>
-        <!--Drag And Drop Level View Controller-->
+        <!--Jigsaw Level View Controller-->
         <scene sceneID="KaS-BI-lkE">
             <objects>
-                <viewController id="lXw-5a-cOg" customClass="DragAndDropLevelViewController" customModule="Thesis" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="lXw-5a-cOg" customClass="JigsawLevelViewController" customModule="Thesis" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="5j9-vq-aHd"/>
                         <viewControllerLayoutGuide type="bottom" id="wPP-x3-9kk"/>
@@ -210,8 +210,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="i5U-sq-BGJ">
-                                <rect key="frame" x="273" y="539" width="54" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="i5U-sq-BGJ">
+                                <rect key="frame" x="273" y="520" width="54" height="30"/>
                                 <state key="normal" title="Camera"/>
                                 <connections>
                                     <segue destination="vvG-nh-eYh" kind="presentation" id="S0t-Hu-WMN"/>
@@ -219,6 +219,10 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="wPP-x3-9kk" firstAttribute="top" secondItem="i5U-sq-BGJ" secondAttribute="bottom" constant="50" id="fkD-iw-Nh7"/>
+                            <constraint firstItem="i5U-sq-BGJ" firstAttribute="centerX" secondItem="gfi-bz-KYW" secondAttribute="centerX" id="h0g-ZX-vDB"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="zKX-Ja-hYc">
                         <barButtonItem key="leftBarButtonItem" title="Back" id="dEX-Nz-iBk">
@@ -307,10 +311,10 @@
             </objects>
             <point key="canvasLocation" x="2244" y="2443"/>
         </scene>
-        <!--Drag And Drop Camera View Controller-->
+        <!--Jigsaw Camera View Controller-->
         <scene sceneID="pIG-vp-vI6">
             <objects>
-                <viewController id="ah2-6R-rKC" customClass="DragAndDropCameraViewController" customModule="Thesis" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="ah2-6R-rKC" customClass="JigsawCameraViewController" customModule="Thesis" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="Lhk-cE-Anp"/>
                         <viewControllerLayoutGuide type="bottom" id="RXV-a8-9bJ"/>
@@ -323,7 +327,7 @@
                     <navigationItem key="navigationItem" id="YoF-X1-g5N">
                         <barButtonItem key="rightBarButtonItem" title="Done" id="GBo-kO-mLU">
                             <connections>
-                                <segue destination="lT8-vv-92n" kind="unwind" unwindAction="cancelToDragAndDropLevelViewController:" id="K37-ep-Kkx"/>
+                                <segue destination="lT8-vv-92n" kind="unwind" unwindAction="cancelToJigsawLevelViewController:" id="A7B-6S-nHz"/>
                             </connections>
                         </barButtonItem>
                     </navigationItem>
@@ -391,8 +395,8 @@
                                     <segue destination="ERG-8u-MVy" kind="show" id="KUY-Q0-eOk"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MML-dE-S9Z">
-                                <rect key="frame" x="427" y="103" width="49" height="30"/>
+                            <button opaque="NO" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="MML-dE-S9Z">
+                                <rect key="frame" x="431" y="103" width="49" height="30"/>
                                 <state key="normal" title="Level 3"/>
                                 <connections>
                                     <segue destination="yEc-8Y-sKB" kind="show" id="umb-dE-Ma3"/>
@@ -402,6 +406,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="6Ol-LH-qd7" firstAttribute="centerX" secondItem="aEF-rD-81B" secondAttribute="centerX" id="4bx-SG-2CQ"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="MML-dE-S9Z" secondAttribute="trailing" constant="100" id="9g9-ha-VDE"/>
                             <constraint firstItem="17f-7a-KCK" firstAttribute="top" secondItem="aT0-iw-nlm" secondAttribute="bottom" constant="20" id="cze-Cg-qUr"/>
                             <constraint firstItem="17f-7a-KCK" firstAttribute="centerX" secondItem="aEF-rD-81B" secondAttribute="centerX" id="mTv-U1-TiI"/>
                             <constraint firstItem="yyx-H1-zFk" firstAttribute="leading" secondItem="aEF-rD-81B" secondAttribute="leadingMargin" constant="100" id="xfW-Yy-wCA"/>
@@ -429,23 +434,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="JzY-p0-TrR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="739" y="935"/>
-        </scene>
-        <!--View Controller-->
-        <scene sceneID="bVs-j6-QSF">
-            <objects>
-                <viewController id="LOm-aV-YxL" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="eeE-j2-jPw"/>
-                        <viewControllerLayoutGuide type="bottom" id="bhP-OU-tzA"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="hgl-Vg-Pb4">
-                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="guK-q2-3xA" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
         </scene>
     </scenes>
 </document>
